--- a/style.css
+++ b/style.css
@@ -1,70 +1,120 @@
-*{
+* {
     margin: 0;
-padding: 0;
-box-sizing: border-box;
-font-family: 'Merriweather', serif;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Merriweather', serif;
+    background-color: #000;
 }
 
-header{
+header {
     background: #000;
     height: 100vh;
     width: 100vw;
 }
-nav{
+
+nav {
     display: flex;
     align-items: center;
-justify-content: space-between;
-color: white;
-padding: 5% 5% 0 5%;
+    justify-content: space-between;
+    color: white;
+    padding: 5% 5% 0 5%;
 }
 
-nav h2{
+nav h2 {
     font-size: 35px;
     color: white;
     letter-spacing: 2px;
-    
-}
-nav h2 span{
-color: aqua;
+
 }
 
-nav ul li{
+nav h2 span {
+    color: aqua;
+}
+
+nav ul li {
     color: white;
     display: inline-block;
-    
-list-style: none;
+
+    list-style: none;
 }
 
-nav ul li a{
+nav ul li a {
     color: white;
     font-size: 20px;
     padding: 5px;
     margin: 10px;
     text-decoration: none;
 }
-.picture{
+
+.picture {
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.picture img{
+
+.picture img {
     height: 50vh;
-    width:50vw;
+    width: 50vw;
 }
-.about{
+
+.about {
     display: flex;
     flex-direction: column;
-    background: rgb(180, 140, 140);
-text-align: center;    color: white;
-line-height: 7vh;
-}
-.about h3{
-    letter-spacing: 3px;
-color: rgb(0, 213, 255);    }
-.about h1{
+    text-align: center;
     color: white;
-    font-size:6vh;
+    line-height: 7vh;
 }
-.about h3{
-font-size:  3vh;
+
+.about h3 {
+    letter-spacing: 3px;
+    color: rgb(0, 213, 255);
+}
+
+.about h1 {
+    color: white;
+    font-size: 6vh;
+}
+
+.about h3 {
+    font-size: 3vh;
+}
+
+
+/* skills */
+
+#skills{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width:600px;
+    padding:   25px 0;
+
+}
+.language{
+    font-size: 20px;
+    font-weight: bold;
+    color: white;
+    margin: 25px 0;
+}
+.skill-bar{
+    height: 20px;
+background: rgb(74, 74, 74);
+border-radius: 5px;
+}
+.percentage {
+    border-radius: 5px;
+height: 20px;
+background: aqua;
+position: relative;
+}
+.percentage::before {
+content: attr(per);
+position: absolute;
+background: white;
+border-radius: 3px;
+top: -35px;
+right:0;
+font-weight: bolder;
+padding: 5px 6px;
+font-size: 12px;
 }
