--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@
 
 header {
     background: #000;
-    height: 100vh;
-    width: 100vw;
+    height:90vh;
+    width: 90vw;
 }
 
 nav {
@@ -83,13 +83,21 @@ nav ul li a {
 /* skills */
 
 #skills{
-    display: flex;
-    flex-direction: column;
     width: 100%;
     max-width:600px;
+    margin-left: 5%;
+
     padding:   25px 0;
 
 }
+
+.skill-section{
+    display: flex;
+}
+.skill-section img{
+   margin-left: 3%;
+}
+
 .language{
     font-size: 20px;
     font-weight: bold;
