--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@
 
 header {
     background: #000;
-    height:90vh;
-    width: 90vw;
+    height:100vh;
+    width: 100vw;
 }
 
 nav {
@@ -54,7 +54,7 @@ nav ul li a {
 
 .picture img {
     height: 50vh;
-    width: 50vw;
+    align-items: center;
 }
 
 .about {
@@ -66,8 +66,8 @@ nav ul li a {
 }
 
 .about h3 {
-    letter-spacing: 3px;
-    color: rgb(0, 213, 255);
+    letter-spacing: 2px;
+    /* color: rgb(0, 213, 255); */
 }
 
 .about h1 {
@@ -81,6 +81,13 @@ nav ul li a {
 
 
 /* skills */
+.title{
+    color: white;
+border-bottom: 5px solid aqua;
+font-size: 20px;
+display: inline-block;
+
+}
 
 #skills{
     width: 100%;
@@ -104,11 +111,15 @@ nav ul li a {
     color: white;
     margin: 25px 0;
 }
+#JAVASCRIPT{
+    padding-bottom: 20px;
+}
 .skill-bar{
     height: 20px;
 background: rgb(74, 74, 74);
 border-radius: 5px;
 }
+
 .percentage {
     border-radius: 5px;
 height: 20px;
@@ -125,4 +136,73 @@ right:0;
 font-weight: bolder;
 padding: 5px 6px;
 font-size: 12px;
+}
+
+/* ABOUT US */
+.aboutus{
+    color: wheat;
+ display: flex;
+ padding: 1rem;
+}
+.aboutus img{
+    height: 40vh;
+   
+}
+.aboutus h2{
+    text-align: center;
+    margin-top:7% ;
+    color: aqua;
+}
+.about-me{
+    padding: 1rem;
+}
+.about-me p{
+    color: white;
+margin-top:8%;
+font-size: 1rem;
+font-weight: bolder;
+line-height: 3vh;
+
+padding: 0 10%;
+
+}
+@media(max-width:500px){
+    .aboutus{
+
+    display: block;
+    }
+    .aboutus img{
+        width: 100vw;
+        height: 40vh;
+        align-items: center;
+        justify-content: center;
+        display: flex;
+    }
+}
+
+/* PROJECTS */
+.projects{
+    
+}
+
+.pro-image img{
+    height: 30vh;
+    width: 30vw;
+}
+.pro-image img{
+    height: 30vh;
+    width: 80vw;
+
+}
+
+@media(min-width:500px){
+
+    .project-container{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+    .pro-image img{
+        height: 30vh;
+        width: 30vw;
+    }
 }
