--- a/style.css
+++ b/style.css
@@ -205,6 +205,8 @@ border: 2px solid white;
 .pro-image img{
     height: 30vh;
     width: 90vw;
+    overflow: hidden;
+
 }
 .pro-about{
     color: white;
@@ -268,7 +270,8 @@ text-decoration: none;
     .pro-image img{
         height: 30vh;
         width: 25vw;
-        object-fit: cover;
+        overflow: hidden;
+
     }
 }
 
@@ -284,3 +287,51 @@ text-decoration: none;
     color: rgb(143, 63, 63);
     background: white;
 } */
+
+
+.contact {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;    
+
+}
+
+.contact-item {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.icon {
+    font-size: 24px;
+    margin-right: 10px;   
+
+}
+.icon i{
+    color: white;
+}
+.info {    
+color: white;
+    font-size: 16px;
+}
+.social-icons{
+    border: 2px solid white;
+    margin-bottom: 5vh;
+    display: flex;
+    justify-content: center;
+    gap: 3vw;
+}
+.social-icons a {
+    color: white;
+    font-size: 24px;
+    margin: 0 5px;
+    text-decoration: none;
+    transition: color 0.3s ease-in-out;
+}
+
+.social-icons a:hover {
+    color: #007bff;
+}
+
+/* hambu */
