--- a/style.css
+++ b/style.css
@@ -359,6 +359,43 @@ word-wrap: break-word;
     align-items: center;
 
 }
+.contact-form{
+    width: 50%;
+    margin: 5% 0 5% 5%;
+}
+.contactus-form{
+
+display: flex;
+justify-content: center;
+flex-direction: column;
+
+    }    
+        
+    .contactus-form input , textarea{
+        background: gray;
+        padding: 10px;
+        border-radius: 5px ;
+    }
+
+form{
+     color: #ffffff;
+}
+
+form button{
+    margin: 20px 0;
+    height: 40px;
+    width: 30%;
+    color: rgb(254, 254, 254);
+    border-radius: 5px;
+    padding: 10px;
+    border: 1px solid white;
+background: rgb(83, 83, 83);
+}
+form button:hover{
+    background: rgb(124, 124, 124);
+}
+
+
 
 @media(max-width:400px){
 
